added  the Database and video_edit

--- a/internal/email/templates/625608093_bye.html
+++ b/internal/email/templates/625608093_bye.html
@@ -43,11 +43,11 @@ width: 100% !important
                 
                 <tbody><tr>
                   <td class="content-cell" style="color:#74787E;font-size:15px;line-height:18px;padding:35px">
-                    <h1 style="margin-top:0;color:#2F3133;font-size:19px;font-weight:bold">Привет Ритупарн,</h1>
+                    <h1 style="margin-top:0;color:#2F3133;font-size:19px;font-weight:bold">До свидания Ритупарн,</h1>
                     
                         
                           
-                            <p style="margin-top:0;color:#74787E;font-size:16px;line-height:1.5em">Добро пожаловать в сервис конвертации видео, мы очень рады, что вы с нами.</p>
+                            <p style="margin-top:0;color:#74787E;font-size:16px;line-height:1.5em">Мы очень рады, что вы выбрали нас! Мы надеемся, что встретимся снова!.</p>
                           
                         
                     
@@ -66,7 +66,7 @@ width: 100% !important
                       
                         
                           
-                            <p style="margin-top:0;color:#74787E;font-size:16px;line-height:1.5em">Чтобы подтвердить свой адрес электронной почты, пожалуйста, нажмите здесь:</p>
+                            <p style="margin-top:0;color:#74787E;font-size:16px;line-height:1.5em">Чтобы восстановить ваши данные, нажмите здесь:</p>
                             
                             
                             
@@ -75,14 +75,14 @@ width: 100% !important
                                 <div style="margin: 30px auto;v-text-anchor:middle;text-align:center">
                                   <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" 
                                     xmlns:w="urn:schemas-microsoft-com:office:word" 
-                                    href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=472e75c8-a89b-4d05-b303-d31fb1323c9d&amp;userId=625608093" 
-                                    style="height:45px;v-text-anchor:middle;width:317px;background-color:#0077FF;"
+                                    href="https://knowing-gannet-actively.ngrok-free.app/profile/restore" 
+                                    style="height:45px;v-text-anchor:middle;width:353px;background-color:#0077FF;"
                                     arcsize="10%" 
                                     strokecolor="#0077FF" fillcolor="#0077FF"
                                     >
                                     <w:anchorlock/>
                                     <center style="color: #FFFFFF;font-size: 15px;text-align: center;font-family:sans-serif;font-weight:bold;">
-                                      Подтвердить почту
+                                      восстановить данные
                                     </center>
                                   </v:roundrect>
                                 </div>
@@ -95,8 +95,8 @@ width: 100% !important
                                   <td align="center" style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
                                     <div>
                                       
-                                        <a href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=472e75c8-a89b-4d05-b303-d31fb1323c9d&amp;userId=625608093" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:317px" target="_blank" width="317">
-                                          Подтвердить почту
+                                        <a href="https://knowing-gannet-actively.ngrok-free.app/profile/restore" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:353px" target="_blank" width="353">
+                                          восстановить данные
                                         </a>
                                       
                                       
@@ -132,8 +132,8 @@ width: 100% !important
                                 
                                 <tr>
                                   <td style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
-                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px">Если у вас возникли проблемы с кнопкой &#39;Подтвердить почту&#39;, скопируйте и вставьте приведенный ниже URL-адрес в свой веб-браузер.</p>
-                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=472e75c8-a89b-4d05-b303-d31fb1323c9d&amp;userId=625608093" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/verify_mail?code=472e75c8-a89b-4d05-b303-d31fb1323c9d&amp;userId=625608093</a></p>
+                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px">Если у вас возникли проблемы с кнопкой &#39;восстановить данные&#39;, скопируйте и вставьте приведенный ниже URL-адрес в свой веб-браузер.</p>
+                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/profile/restore" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/profile/restore</a></p>
                                   </td>
                                 </tr>
                                 
