--- a/templates/convert_success.html
+++ b/templates/convert_success.html
@@ -9,7 +9,7 @@
     <script>
         window.onload = function() {
             setTimeout(function() {
-                window.location.href = '/convert';
+                window.location.href = '/cut_edit';
             }, 2500);
         };
     </script>
@@ -26,7 +26,7 @@
                     <li class="sm:text-sm md:text-2xl  mt-8"> Файл успешно загрузил</li>
                 </ul>
                 <ul class="mt-2 mb-2 VK-Sans py-2 text-center">
-                    <li class=" sm:text-sm  md:text-md indent-2">перенаправляю тебя обратно </li>
+                    <li class=" sm:text-sm  md:text-md indent-2">перенаправляю тебя на экран редактирования </li>
                 </ul>
                 <a  class="mt-4 sm:mt-8 VK-Sans text-white bg-gray-800 text-center bg-opacity-40  border border-gray-200 focus:ring-2 focus:outline-none focus:ring-gray-100 font-sans rounded-full text-sm sm:text-md px-5 sm:px-10 py-2 text-center inline-flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" style="margin-right:10px;background:none;display:block;"
