Now the FFMPEG utility are working

--- a/templates/cut_edit.html
+++ b/templates/cut_edit.html
@@ -167,7 +167,7 @@
                         <form id="video_form" action="/cut" method="post" enctype="multipart/form-data" class="flex flex-col items-center justify-center w-full">
                             <div class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-600 bg-gray-800 bg-opacity-20 border-dashed rounded-lg cursor-pointer">
                                     <video id="Video" controls class="w-full h-full aspect-video">
-                                        <source src="../uploads/{{.userVideo}}" type="video/mp4">
+                                        <source src="/uploads/{{.userVideo}}" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                             </div>
