Adding the code

--- a/internal/email/templates/625608093_Конвертировать_mail.html
+++ b/internal/email/templates/625608093_Конвертировать_mail.html
@@ -75,14 +75,14 @@ width: 100% !important
                                 <div style="margin: 30px auto;v-text-anchor:middle;text-align:center">
                                   <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" 
                                     xmlns:w="urn:schemas-microsoft-com:office:word" 
-                                    href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=ObjectID%28%2265dba4ec872345dd87554899%22%29" 
+                                    href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcab12855005061ef3c5d0&amp;mode=%d0%9a%d0%be%d0%bd%d0%b2%d0%b5%d1%80%d1%82%d0%b8%d1%80%d0%be%d0%b2%d0%b0%d1%82%d1%8c" 
                                     style="height:45px;v-text-anchor:middle;width:200px;background-color:#0077FF;"
                                     arcsize="10%" 
                                     strokecolor="#0077FF" fillcolor="#0077FF"
                                     >
                                     <w:anchorlock/>
                                     <center style="color: #FFFFFF;font-size: 15px;text-align: center;font-family:sans-serif;font-weight:bold;">
-                                      Заг
+                                      Загруззить
                                     </center>
                                   </v:roundrect>
                                 </div>
@@ -95,8 +95,8 @@ width: 100% !important
                                   <td align="center" style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
                                     <div>
                                       
-                                        <a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=ObjectID%28%2265dba4ec872345dd87554899%22%29" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:200px" target="_blank" width="200">
-                                          Заг
+                                        <a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcab12855005061ef3c5d0&amp;mode=%d0%9a%d0%be%d0%bd%d0%b2%d0%b5%d1%80%d1%82%d0%b8%d1%80%d0%be%d0%b2%d0%b0%d1%82%d1%8c" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:200px" target="_blank" width="200">
+                                          Загруззить
                                         </a>
                                       
                                       
@@ -132,8 +132,8 @@ width: 100% !important
                                 
                                 <tr>
                                   <td style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
-                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px">Если у вас возникли проблемы с кнопкой &#39;Заг&#39;, скопируйте и вставьте приведенный ниже URL-адрес в свой веб-браузер.</p>
-                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=ObjectID%28%2265dba4ec872345dd87554899%22%29" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=ObjectID(&#34;65dba4ec872345dd87554899&#34;)</a></p>
+                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px">Если у вас возникли проблемы с кнопкой &#39;Загруззить&#39;, скопируйте и вставьте приведенный ниже URL-адрес в свой веб-браузер.</p>
+                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcab12855005061ef3c5d0&amp;mode=%d0%9a%d0%be%d0%bd%d0%b2%d0%b5%d1%80%d1%82%d0%b8%d1%80%d0%be%d0%b2%d0%b0%d1%82%d1%8c" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcab12855005061ef3c5d0&amp;mode=Конвертировать</a></p>
                                   </td>
                                 </tr>
                                 
