--- a/templates/convert.html
+++ b/templates/convert.html
@@ -154,7 +154,7 @@
                                     <option value="" disabled selected>Формат выходного файла</option>
                                     <option value="mkv">Mkv</option>
                                     <option value="mov">Mov</option>
-                                    <option value="ogg">Ogg</option>
+                                    <option value="mp3">Mp3</option>
                                 </select>
                             </div>
 
