--- a/templates/cut_success.html
+++ b/templates/cut_success.html
@@ -9,7 +9,7 @@
     <script>
         window.onload = function() {
             setTimeout(function() {
-                window.location.href = '/cut_edit';
+                window.location.href = '/cut';
             }, 2500);
         };
     </script>
@@ -27,7 +27,7 @@
                 </ul>
 
                 <ul class="mt-4 mb-2 VK-Sans py-2 text-center text-md">
-                    <li class=" sm:text-sm  md:text-md indent-2">перенаправляю тебя на экран редактирования !</li>
+                    <li class=" sm:text-sm  md:text-md indent-2">перенаправляю тебя обратно!</li>
                 </ul>
 
                 <ul class=" mb-2 ml-2 VK-Sans text-center">
