--- a/templates/watermark.html
+++ b/templates/watermark.html
@@ -150,7 +150,7 @@
                 <h1 class="mb-2 mt-2 text-sm text-center m-4">Загружите видео и файл который вы хотите использовать</h1>
                 <div class="sm:m-8 sm:mb-8 flex flex-col sm:flex-row items-center justify-between">
                     <div class="flex flex-col items-center justify-end mb-4 sm:mb-0">
-                        <form action="/cut" method="post" enctype="multipart/form-data" class="flex flex-col items-center justify-center w-full">
+                        <form action="/watermark" method="post" enctype="multipart/form-data" class="flex flex-col items-center justify-center w-full">
                             <label for="dropzone-file" class="flex flex-col items-center justify-center w-full h-64 border-2 border-gray-600 bg-gray-800 bg-opacity-20 border-dashed rounded-lg cursor-pointer">
                                 <div class="flex flex-col items-center  pt-5 pb-6">
                                     <svg class="w-8 h-8 mb-4 text-white " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
@@ -165,7 +165,7 @@
                             <div id="error-message" class="hidden text-red-500 text-sm">Пожалуйста, выберите формат файла MP4</div>
                             <label class="mt-4 rounded-3xl bg-gray-800 bg-opacity-30 border border-gray-200 text-white text-center p-2">
                                 <p class="px-4 ">Фото в формат jpg/png</p>
-                                <input type="file" id="file_watermark" class="hidden">
+                                <input type="file" id="file_watermark" name="watermark_file" class="hidden">
                             </label>
                             <p id="watermark_file" class="text-sm  mt-2">Файл не выбран</p>
 
