--- a/templates/watermark_success.html
+++ b/templates/watermark_success.html
@@ -26,7 +26,7 @@
                     <li class="sm:text-sm md:text-2xl  mt-8"> Файл успешно загрузил</li>
                 </ul>
                 <ul class="mb-2 ml-2 VK-Sans text-center text-xl">
-                    <li class="sm:text-sm md:text-2xl  mt-8">Вы можете загрузить его позже в личном кабинете! </li>
+                    <li class="sm:text-sm md:text-xl  mt-8">Вы можете загрузить его позже в личном кабинете! </li>
                 </ul>
                 <ul class="mt-2 mb-2 VK-Sans py-2 text-center">
                     <li class=" sm:text-sm  md:text-md indent-2">перенаправляю тебя обратно </li>
