--- a/internal/email/templates/625608093_Скриншоты_mail.html
+++ b/internal/email/templates/625608093_Скриншоты_mail.html
@@ -43,7 +43,7 @@ width: 100% !important
                 
                 <tbody><tr>
                   <td class="content-cell" style="color:#74787E;font-size:15px;line-height:18px;padding:35px">
-                    <h1 style="margin-top:0;color:#2F3133;font-size:19px;font-weight:bold">Привет ,</h1>
+                    <h1 style="margin-top:0;color:#2F3133;font-size:19px;font-weight:bold">Привет Ритупарн,</h1>
                     
                         
                           
@@ -75,7 +75,7 @@ width: 100% !important
                                 <div style="margin: 30px auto;v-text-anchor:middle;text-align:center">
                                   <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" 
                                     xmlns:w="urn:schemas-microsoft-com:office:word" 
-                                    href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcfc61ecb6c1c338f90346&amp;mode=%d0%a1%d0%ba%d1%80%d0%b8%d0%bd%d1%88%d0%be%d1%82%d1%8b" 
+                                    href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65de060e73eb96210137f90a&amp;mode=%d0%a1%d0%ba%d1%80%d0%b8%d0%bd%d1%88%d0%be%d1%82%d1%8b" 
                                     style="height:45px;v-text-anchor:middle;width:200px;background-color:#0077FF;"
                                     arcsize="10%" 
                                     strokecolor="#0077FF" fillcolor="#0077FF"
@@ -95,7 +95,7 @@ width: 100% !important
                                   <td align="center" style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
                                     <div>
                                       
-                                        <a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcfc61ecb6c1c338f90346&amp;mode=%d0%a1%d0%ba%d1%80%d0%b8%d0%bd%d1%88%d0%be%d1%82%d1%8b" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:200px" target="_blank" width="200">
+                                        <a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65de060e73eb96210137f90a&amp;mode=%d0%a1%d0%ba%d1%80%d0%b8%d0%bd%d1%88%d0%be%d1%82%d1%8b" class="button" style="display:inline-block;border-radius:3px;font-size:15px;line-height:45px;text-align:center;text-decoration:none;-webkit-text-size-adjust:none;mso-hide:all;color:#ffffff;background-color:#0077FF;width:200px" target="_blank" width="200">
                                           Загруззить
                                         </a>
                                       
@@ -133,7 +133,7 @@ width: 100% !important
                                 <tr>
                                   <td style="padding:10px 5px;color:#74787E;font-size:15px;line-height:18px">
                                     <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px">Если у вас возникли проблемы с кнопкой &#39;Загруззить&#39;, скопируйте и вставьте приведенный ниже URL-адрес в свой веб-браузер.</p>
-                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcfc61ecb6c1c338f90346&amp;mode=%d0%a1%d0%ba%d1%80%d0%b8%d0%bd%d1%88%d0%be%d1%82%d1%8b" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65dcfc61ecb6c1c338f90346&amp;mode=Скриншоты</a></p>
+                                    <p class="sub" style="margin-top:0;color:#74787E;line-height:1.5em;font-size:12px"><a href="https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65de060e73eb96210137f90a&amp;mode=%d0%a1%d0%ba%d1%80%d0%b8%d0%bd%d1%88%d0%be%d1%82%d1%8b" style="color:#3869D4;word-break:break-all">https://knowing-gannet-actively.ngrok-free.app/profile/download?userid=625608093&amp;fileid=65de060e73eb96210137f90a&amp;mode=Скриншоты</a></p>
                                   </td>
                                 </tr>
                                 
