--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,10 @@
     <title>Profile</title>
     <link href="../static/css/output.css" rel="stylesheet">
     <link rel="icon" href="/static/favicon/favicon.ico" type="image/x-icon">
+    <script
+            src="https://js.sentry-cdn.com/c5e4675807998ce4d4957b8ba136ae69.min.js"
+            crossorigin="anonymous"
+    ></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const button = document.querySelector('.group button');
@@ -104,14 +108,6 @@
                         </svg>
                     </div>
 
-                    <div class="flex flex-row  items-center justify-center">
-                        <p class="text-center text-xl text-white VK-Sans mr-4">История Использования</p>
-                        <svg class="mr-4" xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
-                            <path d="M77 1L93 16L77 31" stroke="white"/>
-                            <path d="M93 16L0 16" stroke="white"/>
-                        </svg>
-                    </div>
-
                     <div class="flex flex-row space-x-14 items-center justify-center">
                         <p class="text-center text-xl text-white VK-Sans">Удалить Аккаунт</p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="94" height="32" viewBox="0 0 94 32" fill="none">
@@ -134,11 +130,6 @@
                 <div class="flex flex-col ml-8 space-y-10">
                     <a href="/profile/email" class=" mt-1 mb-1  bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 VK-Sans text-white bg-gray-800 bg-opacity-20  border border-gray-200 rounded-full text-md px-10 py-2 text-center  items-center">Email
                     </a>
-
-                    <a href="/profile/files" class=" mt-1 mb-1  VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:from-blue-600 hover:to-purple-500 border border-gray-200  rounded-full text-md px-10 py-2 text-center items-center">
-                        File History
-                    </a>
-
 
                     <a href="/profile/delete" class=" mt-1 mb-1 VK-Sans text-white bg-gray-800 bg-opacity-20 bg-gradient-to-r  hover:bg-red-500 border border-gray-200   rounded-full text-md px-10 py-2 text-center  items-center">
                         Delete Account
@@ -167,10 +158,6 @@
             <div class="flex flex-col space-y-4">
                 <a href="/profile/email" class="bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
                     Email
-                </a>
-
-                <a href="/profile/files" class="bg-gradient-to-r hover:from-blue-600 hover:to-purple-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
-                    File History
                 </a>
 
                 <a href="/profile/delete" class="bg-gradient-to-r hover:bg-red-500 text-white bg-gray-800 bg-opacity-20 border border-gray-200 rounded-full text-md px-6 py-2 text-center">
