--- a/templates/restored.html
+++ b/templates/restored.html
@@ -6,6 +6,10 @@
     <title>Welcome back</title>
     <link href="../static/css/output.css" rel="stylesheet">
     <link rel="icon" href="/static/favicon/favicon.ico" type="image/x-icon">
+    <script
+            src="https://js.sentry-cdn.com/c5e4675807998ce4d4957b8ba136ae69.min.js"
+            crossorigin="anonymous"
+    ></script>
     <script>
         window.onload = function() {
             setTimeout(function() {
